# ginkgo-refactor

./: CMakeLists.txt  clang-tidy-hooks.cpp  mock_header.hpp  refactor_dense_to_view_core.cpp  refactor_dense_to_view_kernel_decls.cpp  refactor_dense_to_view_kernels.cpp  refactor_dummy.cpp  refactor_rules.hpp  test_core.cpp  test_kernel_decls.cpp  test_kernels.cpp  test_utils.hpp  utils.hpp
.github/workflows/: main.yml
